force-app/main/default/objects/Holder_Leadtime_Schedule__c/Holder_Leadtime_Schedule__c.object-meta.xml
<CustomObject>
    <label>Holder Leadtime Schedule</label>
    <nameField>
        <label>Holder Leadtime Schedule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holder Leadtime Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>