force-app/main/default/objects/Holder_Leadtime_Schedule__c/fields/Leadtime__c.field-meta.xml
<CustomField>
    <fullName>Leadtime__c</fullName>
    <label>Leadtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>