force-app/main/default/objects/Holder_Leadtime_Schedule__c/fields/QtyLL__c.field-meta.xml
<CustomField>
    <fullName>QtyLL__c</fullName>
    <label>QtyLL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>