force-app/main/default/objects/Holder_Leadtime_Schedule__c/fields/QtyUL__c.field-meta.xml
<CustomField>
    <fullName>QtyUL__c</fullName>
    <label>QtyUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>