force-app/main/default/objects/Holder_Leadtime_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>QtyLL__c</columns>
    <columns>QtyUL__c</columns>
    <columns>Schedule__c</columns>
    <columns>Leadtime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Schedule__c</field>
        <operation>equals</operation>
        <value>RD</value>
    </filters>
    <label>All</label>
</ListView>